Cleanup warnings / errors
 - Missed some import switches from the PyPI restructuring. Patched up.
 - Started rooting through PyCharm warnings:
   * Unused parens for classes without parent classes
   * Overriding type, map, etc. names with names I'd defined
   * Missing pytest dependency in setup.py
   * Unused function parameters
   * A few other small things
 - PEP 8 Still fails all over the place. That will be corrected in a
   separate commit.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 .idea/*
 **/test/**/.cache/*
 **/__pycache__/**
+.cache/**
 
 # packaging artifacts
 MANIFEST
 dist/**
 pydip.egg-info/**
+
+# venv setup
+venv/**
+requirements.txt
